utoipa-gen/tests/snapshots/response_derive_test__derive_response_with_enum_contents_inlined.snap
---
source: utoipa-gen/tests/response_derive_test.rs
assertion_line: 160
expression: v
---
{
  "content": {
    "application/json/1": {
      "schema": {
        "type": "object",
        "required": [
          "name"
        ],
        "properties": {
          "name": {
            "type": "string"
          }
        }
      },
      "examples": {
        "Person1": {
          "value": {
            "name": "name1"
          }
        },
        "Person2": {
          "value": {
            "name": "name2"
          }
        }
      }
    },
    "application/json/2": {
      "schema": {
        "type": "object",
        "required": [
          "name"
        ],
        "properties": {
          "name": {
            "type": "string"
          }
        }
      },
      "example": {
        "name": "name3"
      }
    }
  }
}
