utoipa-gen/tests/snapshots/response_derive_test__derive_response_with_inline_unnamed_schema.snap
---
source: utoipa-gen/tests/response_derive_test.rs
assertion_line: 187
expression: v
---
{
  "content": {
    "application/json": {
      "schema": {
        "type": "array",
        "items": {
          "type": "object",
          "required": [
            "name"
          ],
          "properties": {
            "name": {
              "type": "string"
            }
          }
        }
      }
    }
  }
}
