utoipa-gen/tests/snapshots/response_derive_test__derive_response_with_unit_type.snap
---
source: utoipa-gen/tests/response_derive_test.rs
expression: v
snapshot_kind: text
---
{
  "description": ""
}
