utoipa-gen/tests/snapshots/response_derive_test__derive_unnamed_struct_response.snap
---
source: utoipa-gen/tests/response_derive_test.rs
assertion_line: 25
expression: v
---
{
  "content": {
    "application/json": {
      "schema": {
        "type": "array",
        "items": {
          "type": "string"
        }
      }
    }
  }
}
